Fix alerts box hidden behind top nav bar

--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -127,7 +127,7 @@ button.overlay-button {
 
 #global-alerts {
   position: absolute;
-  top: 10px;
+  top: 80px;
   left: 25%;
   width: 50%;
 }
